Bug 868416: Keep overlay scrollbars the same size irrespective of the current document zoom level. r=roc

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -27,14 +27,6 @@ html|select[multiple] > scrollbar {
   scrollbar[disabled="true"] {
     visibility: hidden;
   }
-
-  scrollbar[orient="vertical"] {
-    -moz-margin-start: -16px;
-  }
-
-  scrollbar[orient="horizontal"] {
-    margin-top: -16px;
-  }
 }
 
 /* ..... track ..... */
